<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eagleye_rt</name>
  <version>0.0.0</version>
  <description>The eagleye_rt package</description>

  <maintainer email="osamu.sekino@tier4.jp">Osamu Sekino</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>geographic_msgs</build_depend>
  <build_depend>geodesy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nmea_msgs</build_depend>
  <build_depend>rtklib_msgs</build_depend>
  <build_depend>eagleye_msgs</build_depend>
  <build_depend>eagleye_coordinate</build_depend>
  <build_depend>eagleye_navigation</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>geographic_msgs</build_export_depend>
  <build_export_depend>geodesy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>nmea_msgs</build_export_depend>
  <build_export_depend>rtklib_msgs</build_export_depend>
  <build_export_depend>eagleye_msgs</build_export_depend>
  <build_export_depend>eagleye_coordinate</build_export_depend>
  <build_export_depend>eagleye_navigation</build_export_depend>
  <build_export_depend>diagnostic_updater</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
  <exec_depend>geodesy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nmea_msgs</exec_depend>
  <exec_depend>rtklib_msgs</exec_depend>
  <exec_depend>eagleye_msgs</exec_depend>
  <exec_depend>eagleye_coordinate</exec_depend>
  <exec_depend>eagleye_navigation</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
