<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eagleye_rt</name>
  <version>0.0.0</version>
  <description>The eagleye_rt package</description>

  <maintainer email="osamu.sekino@tier4.jp">Osamu Sekino</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>tf2_eigen</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>geodesy</depend>
  <depend>sensor_msgs</depend>
  <depend>nmea_msgs</depend>
  <depend>rtklib_msgs</depend>
  <depend>eagleye_msgs</depend>
  <depend>eagleye_coordinate</depend>
  <depend>eagleye_navigation</depend>
  <depend>diagnostic_updater</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>ublox_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
