<?xml version="1.0"?>
<package format="2">
  <name>coordinate</name>
  <version>1.0.0</version>
  <description>The coordinate package</description>

  <maintainer email="osamu.sekino@tier4.jp">Osamu Sekino</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>geodesy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_export_depend>geodesy</build_export_depend>


  <export>
  </export>
</package>
