<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eagleye_coordinate</name>
  <version>0.0.0</version>
  <description>The coordinate package</description>
  <maintainer email="osamu.sekino@tier4.jp">osamu.sekino</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>geodesy</build_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>geodesy</build_export_depend>
  <depend>eigen</depend>
  <depend>geographic_info</depend>
  <depend>geographic_msgs</depend>
  <depend>geographiclib</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
